        - External plugin?
    - Migrate usage of MarketItem.parseTags to DatabaseMarket.parseTags.
    - Change configuration to YAML.
    - Create YAML file to customize messages.

0.5.0:
    - Added Register API for economy support.
        - Supports iConomy 5, iConomy 4, BOSEconomy, and Essentials Economy.
    - Added support for decimals in prices.
    - Defaults to OP if Permissions isn't found or if simple-permissions is set to true in config.
        - Regular users get access to permission nodes dynamicmarket.access, dynamicmarket.buy, and dynamicmarket.sell.
        - OPs have access to all commands.

0.4.8:
    - shopLabel moved from a table name suffix to a table field.
    - Redundant shopLabel parameters removed when the shopLabel could be extracted from a MarketItem object.
    - Added DatabaseMarket.updateAllFromTags() to apply a series of tags to all items at once.
        - Using "all" as the item name now applies the given tags to all items with the current shopLabel.
    - Altering an item's bundleSize now changes its stock level, as well as its basePrice.
        - New stock level is rounded down, to stave off future item duplication issues.
        - Player shops will have to eject items which do not fit in an integer number of bundles.
    - Sanity-check behaviour changed to make database queries more efficient and fend off future exploits:
        - stockHighest/stockLowest set to stock if lower/higher than stock.
        - stockCeil/stockFloor is set to stockFloor if lower/higher than stock.
        - priceCeil is raised to priceFloor if priceCeil<priceFloor.
            - Previous behaviours: Swap if order wrong, range-crop stock if outside highest/lowest/floor/ceil.
    - Fixed bug: Adding items without specifying count did not import count from default record.
    
0.4.7.1:
    - The beginnings of multi-economy support.
    - Works, but not graceful or easy. Error type and superclass inheritance workaround was very kludgy.