@@ -1,2 +1,0 @@
-Manifest-Version: 1.0
-Class-Path: ../sqlitejdbc-v056.jar ../mysql-connector-java-5.1.14-bin.jar ../mysql-connector-java-bin.jar
